# Portfolio_Projekt

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  01_top_anime.ipynb  02_empfehlung.ipynb
presentation/: summary.md
