[project]
name = "portfolio-projekt"
version = "0.1.0"
description = "Anime-Erfolg klassifizieren und Empfehlungen per Clustering auf Basis des MyAnimeList-Datensatzes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "numpy>=2.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
